Pinter_LerdgeK.cfg

--- a/pinter_LerdgeK.cfg
+++ b/pinter_LerdgeK.cfg
@@ -177,6 +177,17 @@ initial_RED: 1.0
 initial_GREEN: 1.0
 initial_BLUE: 1.0
 
+#########################################################
+## Capteurs Filaments :
+[filament_switch_sensor RUNOUT]
+pause_on_runout: True
+runout_gcode:
+     G1 E10 F5000
+     G1 E-100 F5000
+insert_gcode: 
+event_delay: 3.0
+pause_delay: 1
+switch_pin: PE5
 
 #########################################################
 ## BLTouch "https://www.youtube.com/watch?v=5vmjBXvY6BA"
