--- a/Test/printer.cfg
+++ b/Test/printer.cfg
@@ -56,7 +56,7 @@ on_error_gcode: CANCEL_PRINT
 [include reshelper.cfg]
 #[include shell_command.cfg]
 #[include K-ShakeTune/*.cfg]
-[include timelapse.cfg]
+#[include timelapse.cfg]
 #[include Configuration_de_Base/Klicky/*]
 
 ###################################################################################################
