--- a/pinter_LerdgeK.cfg
+++ b/pinter_LerdgeK.cfg
@@ -155,6 +155,21 @@ pid_Kd: 114
 min_temp: -100
 max_temp: 100
 
+[bed_screws]
+screw0: 119,95
+screw0_name: Centre
+screw1: 30,30
+screw1_name: Avant Gauche
+screw2: 208,30
+screw2_name: Avant Droite
+screw3: 208,160
+screw3_name: Arriere Droite 
+screw4: 30,160
+screw4_name: Arriere Gauche
+horizontal_move_z: 10.
+speed: 70.
+screw_thread: CW-M3
+
 #########################################################
 ## Fan :
 
@@ -228,15 +243,15 @@ fade_start: 1
 fade_end: 10
 fade_target: 0
 
-[bed_screws]
-screw1: 30,30
-screw1_name: Vis Av Gauche
-screw2: 208,30
-screw2_name: Vis Av Droite
-screw3: 208,160
-screw3_name: Vis Ar Droite 
-screw4: 30,160
-screw4_name: Vis Ar Gauche
+#[bed_screws]
+#screw1: 30,30
+#screw1_name: Vis Av Gauche
+#screw2: 208,30
+#screw2_name: Vis Av Droite
+#screw3: 208,160
+#screw3_name: Vis Ar Droite 
+#screw4: 30,160
+#screw4_name: Vis Ar Gauche
 
 ##################################################################
 ##  GCODE_macro
