--- a/pinter_LerdgeK.cfg
+++ b/pinter_LerdgeK.cfg
@@ -31,6 +31,9 @@ sensor_type: temperature_host
 [virtual_sdcard]
 path: /home/pi/gcode_files
 
+[gcode_arcs]
+resolution: 0.1
+
 [pause_resume]
 
 [display_status]
