--- a/pinter_LerdgeK.cfg
+++ b/pinter_LerdgeK.cfg
@@ -33,6 +33,11 @@ path: /home/pi/gcode_files
 
 [gcode_arcs]
 resolution: 0.1
+#    Un arc sera divisé en segments. La longueur de chaque segment sera égale à
+#    la résolution en mm définie ci-dessus. Des valeurs plus faibles produiront un
+#    arc plus fin, mais également plus de travail de votre machine. Les arcs plus
+#    petits que la valeur configurée deviendront des lignes droites. La valeur par
+#    défaut est 1 mm.
 
 [pause_resume]
 
